// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileButton> that renders a button should add classes when props are changed 1`] = `
<FileButton
  isBlock={true}
  isPrimary={true}
  size="large"
>
  <label
    className="Button Button--size_large Button--isBlock Button--isPrimary"
    disabled={false}
  >
    <input
      hidden={true}
      isPrimary={true}
      type="file"
    />
    Click me
  </label>
</FileButton>
`;

exports[`<FileButton> that renders a button should render default button correctly 1`] = `
<FileButton>
  <label
    className="Button"
    disabled={false}
  >
    <input
      hidden={true}
      type="file"
    />
    Choose file
  </label>
</FileButton>
`;
